--- a/ListaDeLobinhos/style.css
+++ b/ListaDeLobinhos/style.css
@@ -156,6 +156,7 @@ header a:hover::after {
 }
 
 
+
 .idade {
     margin: 5px;
     font-size: 20px;
@@ -174,6 +175,7 @@ header a:hover::after {
 
 
 
+/*paginação */
 
 
 /*Rodapé*/
