--- a/lista-de-lobinhos/style.css
+++ b/lista-de-lobinhos/style.css
@@ -61,10 +61,11 @@ main {
     height: 47px;
     width: 700px;
     font-size: 1.3rem;
+    margin-right: 10px;
     margin-top: 50px;
 }
 
-.btn-procurar {
+.btn-adicionar {
     width: 130px;
     height: 53px;
     margin-left: 10px;
@@ -74,6 +75,18 @@ main {
     font-weight: 500;
     padding-bottom: 14px;
     cursor: pointer;
+}
+
+.btn-procurar {
+    border: none;
+    background-color: #fff;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.btn-procurar img {
+    width: 40px;
+    height: 40px;
 }
 
 .checkbox {
