--- a/lista-de-lobinhos/style.css
+++ b/lista-de-lobinhos/style.css
@@ -57,6 +57,8 @@ main {
     align-items: center;
 }
 
+/* Barra de pesquisa, botão + lobo e checkbox */
+
 .procurar-lobo {
     height: 47px;
     width: 700px;
@@ -105,6 +107,8 @@ main {
     height: 20px;
     width: 20px;
 }
+
+/* Lista de lobos */
 
 .container {
     width: 70%;
@@ -240,6 +244,8 @@ main {
 .lobo-direita .secao-2-2 p {
     text-align: right;
 }
+
+/* Paginação */
 
 .paginacao button {
     padding: 10px 15px;
